# GameBoy_emulator

./: CMakeLists.txt  README.md
GameBoy_emu/: CMakeProject1.cpp  CMakeProject1.h  Main.cpp  Types.h  UnitTests.cpp
GameBoy_emu/CPU/: CPUFunctions.cpp  Emulator.cpp  Emulator.h  Interupts.cpp  Joypad.cpp  LCD.cpp  Memory.cpp  Misc.cpp  PublicFunctions.cpp  Timers.cpp
GameBoy_emu/Emulator/: CPUFunctions.cpp  Emulator.cpp  Emulator.h  Graphics.cpp  Interrupts.cpp  Joypad.cpp  LCD.cpp  Memory.cpp  PublicFunctions.cpp  Timers.cpp
GameBoy_emu/Emulator/Misc/: BitOps.h  Misc.cpp  Utils.cpp
